force-app/main/default/objects/Pricing_Rule__mdt/Pricing_Rule__mdt.object-meta.xml
<CustomObject>
    <description>Discount policy driven by customer tier, segment, product family and volume band. Lives in Custom Metadata so changing a pricing rule is a configuration change, never an Apex change, and so the policy costs nothing against the org data storage allocation.</description>
    <label>Pricing Rule</label>
    <pluralLabel>Pricing Rules</pluralLabel>
</CustomObject>