force-app/main/default/objects/Pricing_Rule__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether the pricing engine considers this rule. Inactive rules stay in place as history instead of being deleted, so a policy change is reversible.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>