force-app/main/default/objects/Pricing_Rule__mdt/fields/Max_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Max_Quantity__c</fullName>
    <description>Upper bound of the volume band, inclusive. Empty means no ceiling.</description>
    <label>Maximum Quantity</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>