force-app/main/default/objects/Pricing_Rule__mdt/fields/Min_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Min_Quantity__c</fullName>
    <description>Lower bound of the volume band, inclusive. Empty means the rule is not volume based.</description>
    <label>Minimum Quantity</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>