force-app/main/default/objects/Pricing_Rule__mdt/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <description>Product family the rule is restricted to. Empty matches any family.</description>
    <label>Product Family</label>
    <length>50</length>
    <type>Text</type>
</CustomField>