force-app/main/default/objects/Pricing_Rule__mdt/fields/Stackable__c.field-meta.xml
<CustomField>
    <fullName>Stackable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this discount adds to another matching rule instead of replacing it. Volume bands stack on top of the tier discount; tier discounts do not stack with each other.</description>
    <label>Stackable</label>
    <type>Checkbox</type>
</CustomField>